# dbwhisper

./: .coverage  .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  ENHANCEMENT_PLAN.md  LICENSE  README.md  SECURITY.md  compose.yaml  pyproject.toml  render.yaml  run.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
app/: main.py  models.py  user_db_config_loader.py
app/agent/: chain.py  prompt.py  tools.py
app/api/: auth.py
app/core/: config.py  embeddings.py  observability.py  query_executor.py  result_formatter.py  retriever.py  sql_validator.py
app/schema_pipeline/: __init__.py  builder.py  embedding_pipeline.py  introspector.py  minimal_text.py  models.py  orchestrator.py  pipeline.py  schema_documenting.py  structured_docs.py  user_database_manager.py  writer.py
app/security/: auth.py  db_readonly_checker.py  passwords.py  ratelimit.py  sessions.py  tenancy.py  user_auth.py
app/static/: chat.css  chat.html  chat.js
app/utils/: logger.py  token_tracker.py  tool_cache.py
database_schemas/crm_db/db_intro/: crm_db.txt
database_schemas/crm_db/schema/: metadata.yaml  schema_index.yaml
database_schemas/crm_db/schema/dbo/: AgentMaster.yaml  ChatConnection.yaml  ChatMessage.yaml  ChatRoom.yaml  ChatRoomMember.yaml  Deal.yaml  DealDocument.yaml  LeadMaster.yaml  LoginFailure.yaml  LoginHistory.yaml  Menu.yaml  MenuRole.yaml  Role.yaml  UserMaster.yaml
database_schemas/demo/schema/: metadata.yaml  schema_index.yaml
database_schemas/demo/schema/demo/: customers.yaml  order_items.yaml  orders.yaml  products.yaml
db/: conversation_memory.py  database_manager.py  langchain_memory.py  model.py  verified_queries.py
docs/: BACKUP.md
scripts/: seed_demo_db.py
tests/: conftest.py  test_auth.py  test_auth_endpoints.py  test_auth_foundation.py  test_config.py  test_embeddings.py  test_hardening.py  test_health.py  test_introspector.py  test_logger_sanitize.py  test_providers.py  test_query_tenancy.py  test_ratelimit.py  test_sanitizers.py  test_sessions.py  test_sql_validator.py  test_tenancy.py  test_token_tracker.py
web/: .env.example  .gitignore  README.md  instrumentation-client.ts  instrumentation.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: apple-icon.tsx  error.tsx  global-error.tsx  globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
web/app/(app)/: layout.tsx
web/app/(app)/app/: page.tsx
web/app/(app)/app/schema/: page.tsx
web/app/(app)/app/training/: page.tsx
web/app/(marketing)/: layout.tsx  page.tsx
web/app/components/: AppSidebar.tsx  AppTopBar.tsx  AuthBar.tsx  AuthProvider.tsx  CopyButton.tsx  ExportMenu.tsx  Footer.tsx  HealthBadge.tsx  HistoryMenu.tsx  Icon.tsx  MobileNav.tsx  ResultChart.tsx  ResultsPanel.tsx  ResultsSkeleton.tsx  ResultsTable.tsx  SidebarContent.tsx  SqlCode.tsx  StagedProgress.tsx  WorkspaceProvider.tsx  links.ts  nav.ts
web/src/lib/: api.ts  auth.ts  chart.ts  export.ts  history.ts  rows.ts  site.ts
