[project]
name = "dbwhisper"
version = "0.1.0"
description = "DBWhisper — a natural-language-to-SQL agent with multi-provider LLM fallback, schema-aware PGVector retrieval, and read-only safety enforcement."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web
    "fastapi>=0.138.2",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    # SQL / data
    "sqlalchemy>=2.0.51",
    "sqlparse>=0.5.5",
    "pyyaml>=6.0.2",
    "numpy>=2.5.0",
    "pandas>=2.3.3",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "tiktoken>=0.13.0",
    # LLM providers (fallback chain in app/agent/chain.py)
    "langchain>=1.3.11",
    "langchain-core>=1.0.4",
    "langchain-community>=0.4.2",
    "langgraph>=1.0.3",
    "langchain-groq>=1.1.3",
    "langchain-google-genai>=3.2.0",
    "langchain-openai>=1.3.3",
    "langchain-deepseek>=1.1.0",
    "langchain-anthropic>=1.4.8",
    "groq>=0.37.1",
    "langsmith>=0.9.4",
    # Vector store + conversation checkpointing (Postgres / pgvector)
    "langchain-postgres>=0.0.17",
    "langgraph-checkpoint[postgres]>=3.0.1",
    "langgraph-checkpoint-postgres>=3.0.1",
    "psycopg[binary,pool]>=3.2.12",
    "psycopg2-binary>=2.9.12",
    # Target-database drivers
    "pyodbc>=5.3.0",
    "pymysql>=1.2.0",
    "mysql-connector-python>=9.7.0",
    "sentry-sdk[fastapi]>=2.7",
    "argon2-cffi>=25.1.0",
]

[project.optional-dependencies]
# Local/offline embeddings (heavy: pulls torch + transformers + sentence-transformers).
# NOT installed by default — the deployed image uses the hosted Google embedding
# provider (EMBEDDING_PROVIDER=google) to keep the image small and cold-starts fast.
# Install locally with:  uv sync --extra local-embeddings
local-embeddings = [
    "langchain-huggingface>=1.2.2",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
    "transformers>=4.57.6",
    "einops>=0.8.2",
    "huggingface-hub[hf-xet]>=0.36.0",
    "hf-xet>=1.5.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.15.20",
    "mypy>=1.13.0",
    "vulture>=2.16",
    "pre-commit>=4.0.0",
    "types-pyyaml>=6.0.0",
    "pytest-cov>=7.1.0",
    "pip-audit>=2.10.1",
]

[tool.uv]
# Run-from-source project (uvicorn app.main:app); not a distributable package.
package = false

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["app", "db", "tests"]
extend-exclude = ["database_schemas", "temp_output", "Temp", "Log", "app/static"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
# B008: FastAPI Depends() in defaults is idiomatic. E501: layout owned by the formatter.
# E402: several modules intentionally import after load_dotenv()/logger setup.
# RUF001: prompt templates use intentional Unicode (en dashes, curly quotes).
ignore = ["B008", "E501", "E402", "RUF001"]

[tool.ruff.lint.per-file-ignores]
# Prompt templates carry literal tab/space indentation inside triple-quoted strings.
"app/agent/prompt.py" = ["E101", "W191"]

[tool.ruff.lint.isort]
known-first-party = ["app", "db"]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
mypy_path = "."
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = false
exclude = ['database_schemas/', 'temp_output/', '\.venv/']

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
